fix(multiselect): align token names with component name
I noticed while working on something else the tokens for the multiselect dropdown
are named dropdown-multiselect instead of multiselect-dropdown like they should be

--- a/packages/pharos/src/components/multiselect-dropdown/pharos-multiselect-dropdown.scss
+++ b/packages/pharos/src/components/multiselect-dropdown/pharos-multiselect-dropdown.scss
@@ -1,7 +1,7 @@
 @use '../../utils/scss/mixins';
 
 @mixin selected-text {
-  color: var(--pharos-dropdown-multiselect-color-text-selected);
+  color: var(--pharos-multiselect-dropdown-color-text-selected);
   font-weight: var(--pharos-font-weight-bold);
 }
 
@@ -15,7 +15,7 @@
 }
 
 .multiselect-dropdown__icon {
-  fill: var(--pharos-dropdown-multiselect-color-icon-dropdown);
+  fill: var(--pharos-multiselect-dropdown-color-icon-dropdown);
 }
 
 .multiselect-dropdown__button {
@@ -82,14 +82,14 @@
   &:hover,
   &[highlighted] {
     background-color: var(--pharos-color-ui-20);
-    color: var(--pharos-dropdown-multiselect-color-text-hover);
+    color: var(--pharos-multiselect-dropdown-color-text-hover);
 
     .multiselect-dropdown__option-label {
-      color: var(--pharos-dropdown-multiselect-color-text-hover);
+      color: var(--pharos-multiselect-dropdown-color-text-hover);
     }
 
     .multiselect-dropdown__mark {
-      color: var(--pharos-dropdown-multiselect-color-text-hover);
+      color: var(--pharos-multiselect-dropdown-color-text-hover);
     }
   }
 }
@@ -118,7 +118,7 @@
 .multiselect-dropdown__list {
   @include mixins.font-base;
 
-  max-height: var(--pharos-dropdown-multiselect-size-height-list);
+  max-height: var(--pharos-multiselect-dropdown-size-height-list);
   overflow-y: scroll;
   z-index: 1;
   box-sizing: content-box;
